achievements section layout issue resolved

--- a/src/App.css
+++ b/src/App.css
@@ -127,22 +127,13 @@
 * list 
 */
 .list {
-  width: 95%;
+  width: 99%;
   gap: 1rem;
-}
-.icon-wrapper {
-  width: 64px;
-  height: 64px;
-  background-color: var(--primary-bg2);
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
-  border-radius: 50%;
 }
 .list-image {
   width: 48px;
   height: 48px;
   padding: 5px;
-  flex-grow: 0;
 }
 
 /*
@@ -439,18 +430,6 @@ section {
   }
   .card-img {
     width: 90vw;
-  }
-  /* list */
-  .list {
-    width: 95%;
-    gap: 1rem;
-  }
-  .icon-wrapper {
-    width: 50px;
-    height: 50px;
-  }
-  .list-image {
-    padding: 9px;
   }
   /* Common */
   .heading {
